--- a/app/views/empleado/comparacion/index.html
+++ b/app/views/empleado/comparacion/index.html
@@ -78,8 +78,8 @@
 						    				<select class="form-control" name="evalA">
 						    					<option>--Seleccione una Opción--</option>
 						    					<% for(let i = 0; i < evalUser.length; i ++) {%>
-													<option value="<%- evalUser[i].evaluacion.instrumentId %>"><%- evalUser[i].evaluacion.nombre %></option>
-													<input type="hidden" value="<%- evalUser[i].evaluacionId %>" name="evalIdA">
+													<option value="<%- evalUser[i].evaluacionId %>"><%- evalUser[i].evaluacion.nombre %></option>
+
 						    					<%}%>
 						    				</select>
 						    			</div>
@@ -94,7 +94,7 @@
 						    					<option>--Seleccione una Opción--</option>
 						    					<% for(let i = 0; i < evalUser.length; i ++) {%>
 													<option value="<%- evalUser[i].evaluacion.instrumentId %>"><%- evalUser[i].evaluacion.nombre %></option>
-													<input type="hidden" value="<%- evalUser[i].evaluacionId %>" name="evalIdB">
+													
 						    					<%}%>
 						    				</select>
 						    			</div>
