--- a/app/views/coord_plani/evaluacion/planificar_b.html
+++ b/app/views/coord_plani/evaluacion/planificar_b.html
@@ -66,13 +66,13 @@
 
 									<div class="card-body">
 										<form method="post" action="/coord_plani/plani_eval/<%=Evaluacion.id%>/n/<%=Nucleo.codigo%>" id="plani_eval">
-											<div class="form-group">
+											<!--<div class="form-group">
 												<label>Nombre de la Evaluación:</label>
 												<input type="text" name="nombre" placeholder="Nombre o Titulo de la Evaluación" class="form-control" autofocus>	
-											</div>
+											</div>-->
 
 											<div class="form-row">
-												<div class="form-group col-md-6">
+												<!--<div class="form-group col-md-6">
 													<label for="isntrumento">Instrumento de Evaluación: </label>
 													<select name="instrumento" id="instrumento" class="form-control">
 														<option value=""> --Seleccione una Opción-- </option>
@@ -80,7 +80,7 @@
 															<option value="<%= Instrumentos[j].id %>"><%= Instrumentos[j].titulo %></option>
 														<%}%>
 													</select>
-												</div>
+												</div>-->
 
 												<div class="form-group col-md-6">
 													<label for="unidad">Unidad</label>
@@ -93,7 +93,7 @@
 												</div>
 											</div>					
 
-											<div class="form-row">
+											<!--<div class="form-row">
 												<div class="form-group col-md-6">
 													<label>Fecha de Inicio:</label>
 													<input type="date" name="fecha_i" class="form-control">
@@ -103,7 +103,7 @@
 													<label>Fecha de Fin:</label>
 													<input type="date" name="fecha_f" class="form-control">
 												</div>
-											</div>
+											</div>-->
 
 											<br><br>
 
