--- a/app/views/coord_plani/evaluacion/planificar.html
+++ b/app/views/coord_plani/evaluacion/planificar.html
@@ -40,7 +40,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-2">
+					<div class="col-md-3">
 						<div class="card">
 						  	<div class="card-header">
 						    	Datos Personales:
@@ -57,7 +57,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-10">
+					<div class="col-md-9">
 						<div class="row">
 							<div class="col-md-12">
 								<div class="jumbotron jumbotron-fluid">
@@ -79,7 +79,7 @@
 											<div class="form-row">
 												<div class="form-group col-md-6">
 													<label>Personal a Evaluar:</label>
-													<select name="categoria" id="categoria" class="form-control">
+													<select name="categoria" id="categoria" class="form-control" autofocus>
 														<option value=""> --Seleccione una Opción-- </option>
 														<% for(var i = 0; i < Categorias.length; i ++) {%>
 															<option value="<%= Categorias[i].id %>"><%= Categorias[i].nombre %></option>
@@ -102,7 +102,7 @@
 
 											<div class="form-group">
 												<label>Nombre de la Evaluación:</label>
-												<input type="text" name="nombre" placeholder="Nombre o Titulo de la Evaluación" class="form-control" autofocus>	
+												<input type="text" name="nombre" placeholder="Nombre o Titulo de la Evaluación" class="form-control">	
 											</div>
 
 											<div class="form-row">
