Mejorando la edicion de Evaluacion en Curso I

--- a/app/views/coord_plani/evaluacion/eval_encurso.html
+++ b/app/views/coord_plani/evaluacion/eval_encurso.html
@@ -81,6 +81,8 @@
 										      		<th scope="col">Fecha F</th>
 										      		<th scope="col">Acción</th>
 												</tr>
+												
+												
 
 												<% for(let i = 0; i < Evaluacion.length; i ++) {%>
 													<tr>
@@ -89,7 +91,7 @@
 														<td><%= Evaluacion[i].fecha_i.getDate() %>/<%= Evaluacion[i].fecha_i.getMonth() + 1 %>/<%= Evaluacion[i].fecha_i.getFullYear() %></td>
 														<td><%= Evaluacion[i].fecha_f.getDate() %>/<%= Evaluacion[i].fecha_f.getMonth() + 1 %>/<%= Evaluacion[i].fecha_f.getFullYear() %></td>
 														<td>
-															<button type="button" class="btn btn-primary btn-block edit-eval" data-toggle="modal" data-target="#editEval" data-id="<%- Evaluacion[i].id %>" data-nucleo="<%- Evaluacion[i].nucleo.nombre %>" data-unidad="<%- Evaluacion[i].unidad.nombre %>" data-fechai="<%- Evaluacion[i].fecha_i %>" data-fechaf="<%- Evaluacion[i].fecha_f %>">
+															<button type="button" class="btn btn-primary btn-block edit-eval" data-toggle="modal" data-target="#editEval" data-id="<%- Evaluacion[i].id %>" data-nucleo="<%- Evaluacion[i].nucleo.nombre %>" data-unidad="<%- Evaluacion[i].unidad.nombre %>" data-fechai="<%- Evaluacion[i].fecha_i.getDate() %>-<%- Evaluacion[i].fecha_i.getMonth()+1 %>-<%- Evaluacion[i].fecha_i.getFullYear() %>" data-fechaf="<%- Evaluacion[i].fecha_f %>">
 												              	Editar
 												            </button>
 														</td>
